# prompt-compiler

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: compiler.rs  composer.rs  lib.rs  template.rs  token_budget.rs  validator.rs  version.rs
tests/: integration_tests.rs
