[package]
name = "prompt-compiler"
version = "0.1.0"
edition = "2021"
description = "Compile, compose, validate, and version prompt templates for LLM workflows"
license = "MIT"
repository = "https://github.com/SuperInstance/prompt-compiler"
keywords = ["prompt", "template", "llm", "compiler"]
categories = ["text-processing", "template-engine"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
